AWS-VPC-Module/main.tf
resource "aws_vpc" "main" {
    cidr_block = var.cidr_vpc
    instance_tenancy = "default"
    enable_dns_hostnames = true
    tags       = merge(var.vpc_tags,local.common_tags)
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.internetgateway_tags ,local.common_tags,{Name="${local.common_name}-igw"})
}

resource "aws_subnet" "public" {
  count = var.no_of_availability_zones
  vpc_id     = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = local.availability_zones[count.index]
  map_public_ip_on_launch= true
  tags = merge(var.public_subnet_tags,local.common_tags,{Name="${local.common_name}-public-subnet-${split("-",local.availability_zones[count.index])[2]}"})
}


resource "aws_subnet" "private" {
  count = var.no_of_availability_zones
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = local.availability_zones[count.index]
  map_public_ip_on_launch= false
  tags = merge(var.private_subnet_tags,local.common_tags,{Name="${local.common_name}-private-subnet-${split("-",local.availability_zones[count.index])[2]}"})
}

resource "aws_subnet" "database" {
  count = var.no_of_availability_zones
  vpc_id     = aws_vpc.main.id
  cidr_block = var.database_subnet_cidrs[count.index]
  availability_zone = local.availability_zones[count.index]
  map_public_ip_on_launch= false
  tags = merge(var.database_subnet_tags,local.common_tags,{Name="${local.common_name}-database-subnet-${split("-",local.availability_zones[count.index])[2]}"})
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.public_routetable_tags,local.common_tags,{Name="${local.common_name}-public-rt"})
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.private_routetable_tags,local.common_tags,{Name="${local.common_name}-private-rt"})
}

resource "aws_route_table" "database" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.database_routetable_tags,local.common_tags,{Name="${local.common_name}-database-rt"})
}

resource "aws_route_table_association" "public" {
  count         = var.no_of_availability_zones
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count         = var.no_of_availability_zones
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "database" {
  count         = var.no_of_availability_zones
  subnet_id      = aws_subnet.database[count.index].id
  route_table_id = aws_route_table.database.id
}

resource "aws_eip" "eip" {
  domain   = "vpc"
  tags = merge(var.elastip_ip_tags,local.common_tags,{Name="${local.common_name}-eip"})
}

resource "aws_nat_gateway" "example" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge(var.elastip_ip_tags,local.common_tags,{Name="${local.common_name}-nat-gateway"})

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.main]
}

resource "aws_route" "public" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main.id
}

resource "aws_route" "private" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_nat_gateway.example.id
}

resource "aws_route" "database" {
  route_table_id         = aws_route_table.database.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id             = aws_nat_gateway.example.id
}
